# calvera

./: .gitignore  Cargo.toml  README.md  bench.txt  justfile
benches/: counters.rs  mpsc.rs  poller.rs  spsc.rs
docs/: architecture.md  core-isolation.md
src/: barrier.rs  cursor.rs  disruptor.rs  errors.rs  lib.rs  ring_buffer.rs  sync.rs  wait_strategies.rs
src/_periphery/: affinity.rs  barrier.rs  cursor.rs  mod.rs  wait_strategies.rs
src/builder/: mod.rs  multi.rs  uni.rs
src/consumer/: managed.rs  mod.rs  unmanaged.rs
src/producer/: mod.rs  multi.rs  uni.rs
tests/: loom_tests.rs
verification/: README.md
