[package]
name = "calvera"
version = "0.1.0"
edition = "2024"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
core_affinity = "0.8.3"
crossbeam-utils = "0.8"
thiserror = "2.0.18"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = "0.8.2"
crossbeam = "0.8.4"

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "poller"
harness = false

[[bench]]
name = "counters"
harness = false

